Added swagger for login, logout and register #36
