# backend/controllers/user_controller.go
@@ -13,9 +13,6 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {object} utils.RegisterResponse
-// @securityDefinitions.apikey BearerAuth
-// @in header
-// @name Authorization
 // @Router /api/profile [get]
 func GetProfile(w http.ResponseWriter, r *http.Request) {
 	Email, ok := r.Context().Value("email").(string)
